
_G.LSOL_VERSION history

1 - released to Play Store 2022-03-28 internal test

2 - released to Play Store 2022-03-28 closed test

3 -
	Agnes x 2
	Assembly
	Russian (Yukon)
	Ukrainian/Crimean

6 - released to Play Store 2022-04-22 beta

7 - released to Play Store 2022-04-27 production
	removed are you sure message box when recording lost game (toast instead)
	pcall around json.decode
	toast displayed when version updates
	removed font:getHeight() argument
	removed several log messages
	added more stats

8 -
	bug fixes to Little Spider
	Assembly waste pile changed from FAN_RIGHT to FAN_RIGHT3
	About...
	layout variants stats stored under original variant stats
	bug fix: title and status bars could be vscrolled
